--- a/package.json
+++ b/package.json
@@ -1,23 +1,91 @@
 {
-  "name": "revolute-web.scheeme.com",
-  "version": "0.1.0",
+  "name": "cms-scheeme-app",
   "private": true,
+  "engines": {
+    "node": "16.13.2"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint **/*.{ts,tsx}",
+    "prettier": "prettier --check **/*.{ts,tsx}",
+    "fix:lint": "eslint '**/*.{ts,tsx}' --fix",
+    "fix:prettier": "prettier --write **/*.{ts,tsx}",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "prepare": "husky install",
+    "unit": "jest",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "eslint --ext **/*.{ts,tsx} --fix",
+      "prettier --write **/*.{ts,tsx}"
+    ]
   },
   "dependencies": {
-    "next": "12.1.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.25.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "firebase": "^9.6.4",
+    "firebase-admin": "^10.0.2",
+    "next": "^12.0.10",
+    "postcss-nesting": "^10.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
+    "@babel/core": "^7.16.12",
+    "@jest/globals": "^27.5.1",
+    "@storybook/addon-actions": "^6.4.14",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.4.14",
+    "@storybook/react": "^6.1.21",
+    "@testing-library/cypress": "^8.0.2",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux-logger": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.4.6",
+    "babel-loader": "^8.2.3",
+    "cssnano": "^5.0.15",
+    "cypress": "^9.4.1",
+    "eslint": "^8.7.0",
+    "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.5.6",
+    "husky": "^7.0.0",
+    "jest": "^27.4.7",
+    "jest-dom": "^4.0.0",
+    "msw": "^0.36.8",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "prettier": "^2.5.1",
+    "react-test-renderer": "^17.0.2",
+    "storybook-addon-designs": "^6.2.1",
+    "typescript": "^4.5.4"
   }
 }
